<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp">
        <LinearLayout
            android:id="@+id/llClickItem"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="6">
            <TextView
                android:id="@+id/tvMaPhongSD"
                style="@style/style_text_ctsd"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/maPhong" />
            <TextView
                android:id="@+id/tvMaTBSD"
                style="@style/style_text_ctsd"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/maTB" />
            <TextView
                android:id="@+id/tvSoLuongSD"
                style="@style/style_text_ctsd"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/slmuon" />
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>