<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    tools:context=".Controller.HomeFragmentActivity">
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvName"
            android:layout_width="213dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="80dp"
            android:gravity="center_vertical"
            android:text="Hi, Tâm!"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            android:textStyle="bold" />
        <ImageButton
            android:id="@+id/imvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/logout"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="50dp"
            style="@style/style_ll_home1">
            <LinearLayout
                android:id="@+id/llLoaiTB"
                android:layout_marginEnd="5dp"
                style="@style/style_ll_home">
                <ImageView
                    android:src="@drawable/ic_loaithietbi"
                    style="@style/style_imv_home" />
                <TextView
                    android:text="@string/loaiTB"
                    style="@style/style_text_home" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llThietBi"
                android:layout_marginStart="5dp"
                style="@style/style_ll_home">
                <ImageView
                    android:src="@drawable/ic_thietbi"
                    style="@style/style_imv_home"/>
                <TextView
                    android:text="@string/thietBi"
                    style="@style/style_text_home" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            style="@style/style_ll_home1">
            <LinearLayout
                android:id="@+id/llPhongHoc"
                android:layout_marginEnd="5dp"
                style="@style/style_ll_home">
                <ImageView
                    android:src="@drawable/ic_phonghoc"
                    style="@style/style_imv_home"/>
                <TextView
                    android:text="@string/phongHoc"
                    style="@style/style_text_home"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llCTSuDung"
                android:layout_marginStart="5dp"
                style="@style/style_ll_home">
                <ImageView
                    android:src="@drawable/ic_ctsudung"
                    style="@style/style_imv_home"/>
                <TextView
                    android:text="@string/ctsd"
                    style="@style/style_text_home"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_marginTop="20dp"
            style="@style/style_ll_home1">
            <LinearLayout
                android:id="@+id/llNhanVien"
                android:layout_marginEnd="5dp"
                style="@style/style_ll_home">
                <ImageView
                    android:src="@drawable/ic_nhanvien"
                    style="@style/style_imv_home"/>
                <TextView
                    android:text="@string/nhanVien"
                    style="@style/style_text_home" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llThongKe"
                android:layout_marginStart="5dp"
                style="@style/style_ll_home">
                <ImageView
                    android:src="@drawable/ic_thongke"
                    style="@style/style_imv_home"/>
                <TextView
                    android:text="@string/thongKe"
                    style="@style/style_text_home" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>