<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="28dp"
    android:padding="10dp"
    android:background="@drawable/round_border_while30"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTieuDe"
        android:text="THÔNG TIN"
        style="@style/textview_title_tb"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:text="@string/maNV"
                style="@style/style_themltb_tieude" />
            <TextView
                android:id="@+id/tvMaNV"
                style="@style/style_themltb_tentltb" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:text="@string/tenNV"
                style="@style/style_themltb_tieude" />
            <TextView
                android:id="@+id/tvTenNV"
                style="@style/style_themltb_tentltb" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:text="@string/email"
                style="@style/style_themltb_tieude" />
            <TextView
                android:id="@+id/tvEmail"
                style="@style/style_themltb_tentltb" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:text="Loại"
                style="@style/style_themltb_tieude" />
            <TextView
                android:id="@+id/tvLoai"
                style="@style/style_themltb_tentltb" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>