<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_border_while30"
    android:layout_margin="28dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvTitleDatTB"
        android:text="Đặt thiết bị theo phòng"
        style="@style/textview_title_tb" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/maPhong"
                style="@style/style_text_string"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spMaPhongD"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:text="@string/maTB"
                style="@style/style_text_string"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spMaThietBiD"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:text="@string/ngayMuon"
                style="@style/style_text_string" />

            <EditText
                android:id="@+id/txtNgayD"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical|center"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:inputType="date"
                android:hint="yyyy-mm-dd"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:text="@string/sl"
                style="@style/style_text_string" />

            <EditText
                android:id="@+id/txtSoLuongD"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
                style="@style/style_text_slmuon"/>
            <TextView
                android:id="@+id/tvSoLuongDu"
                style="@style/style_text_sldu"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp">
            <Button
                android:id="@+id/btnHuyD"
                android:text="Hủy"
                style="@style/style_themltb_btn" />
            <Button
                android:id="@+id/btnDat"
                android:text="Đặt"
                style="@style/style_themltb_btn" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>